--- a/vignettes/RDML.bib
+++ b/vignettes/RDML.bib
@@ -835,4 +835,60 @@ PMID: 18667053},
 	pages = {326}
 }
 
+
+@article{gehlenborg_nozzle:_2013,
+  title = {Nozzle: a report generation toolkit for data analysis pipelines},
+  volume = {29},
+  issn = {1367-4803, 1460-2059},
+  shorttitle = {Nozzle},
+  url = {http://bioinformatics.oxfordjournals.org/content/29/8/1089},
+  doi = {10.1093/bioinformatics/btt085},
+  abstract = {Summary: We have developed Nozzle, an R package that provides an Application Programming Interface to generate HTML reports with dynamic user interface elements. Nozzle was designed to facilitate summarization and rapid browsing of complex results in data analysis pipelines where multiple analyses are performed frequently on big datasets. The package can be applied to any project where user-friendly reports need to be created.
+    Availability: The R package is available on CRAN at http://cran.r-project.org/package=Nozzle.R1. Examples and additional materials are available at http://gdac.broadinstitute.org/nozzle. The source code is also available at http://www.github.com/parklab/Nozzle.
+    Contact: peter\_park@hms.harvard.edu
+    Supplementary information: Supplementary data are available at Bioinformatics online.},
+  language = {en},
+  number = {8},
+  urldate = {2014-09-20},
+  journal = {Bioinformatics},
+  author = {Gehlenborg, Nils and Noble, Michael S. and Getz, Gad and Chin, Lynda and Park, Peter J.},
+  month = apr,
+  year = {2013},
+  pmid = {23419376},
+  pages = {1089--1091}
+}
+
+
+@book{wickham_ggplot2_2009,
+  address = {New York, NY},
+  title = {ggplot2 - {Elegant} {Graphics} for {Data} {Analysis}},
+  isbn = {978-0-387-98140-6 978-0-387-98141-3},
+  url = {http://link.springer.com/10.1007/978-0-387-98141-3},
+  language = {en},
+  urldate = {2015-10-16},
+  publisher = {Springer New York},
+  author = {Wickham, Hadley},
+  year = {2009},
+  note = {DOI:10.1007/978-0-387-98141-3}
+}
+
+
+@article{ruijter_evaluation_2013,
+  title = {Evaluation of {qPCR} curve analysis methods for reliable biomarker discovery: {Bias}, resolution, precision, and implications},
+  volume = {59},
+  issn = {10462023},
+  shorttitle = {Evaluation of {qPCR} curve analysis methods for reliable biomarker discovery},
+  url = {http://linkinghub.elsevier.com/retrieve/pii/S1046202312002290},
+  doi = {10.1016/j.ymeth.2012.08.011},
+  language = {en},
+  number = {1},
+  urldate = {2016-10-05},
+  journal = {Methods},
+  author = {Ruijter, Jan M. and Pfaffl, Michael W. and Zhao, Sheng and Spiess, Andrej N. and Boggy, Gregory and Blom, Jochen and Rutledge, Robert G. and Sisti, Davide and Lievens, Antoon and De Preter, Katleen and Derveaux, Stefaan and Hellemans, Jan and Vandesompele, Jo},
+  month = jan,
+  year = {2013},
+  keywords = {Benchmark, Bias, Precision, qPCR curve analysis, Resolution, Transcriptional biomarker},
+  pages = {32--46}
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
